--- a/.github/ISSUE_TEMPLATE/tech_issue.yml
+++ b/.github/ISSUE_TEMPLATE/tech_issue.yml
@@ -26,19 +26,17 @@ body:
     id: importance
     attributes:
       label: 重要度
-      description: この課題の重要度を選択したください。（主観でOK）
+      description: このissueの重要度を選択したください。（主観でOK）
       options:
         - 高
         - 中
         - 低
-      default: 1
   - type: dropdown
     id: urgency
     attributes:
       label: 緊急度
-      description: この課題の緊急度を選択したください。（主観でOK）
+      description: このissueの緊急度を選択したください。（主観でOK）
       options:
         - 高
         - 中
         - 低
-      default: 1
